# cq-bottle-separator

./: Makefile  pyproject.toml
src/bottle_separator/: __init__.py  main.py
